Add "--enable-preview" to script